:memo: 补充Microsoft Learn上学习路线里的知识点

--- a/docs/Cloud/Azure/DP-900.md
+++ b/docs/Cloud/Azure/DP-900.md
@@ -110,9 +110,17 @@ Azure Managed Service: Azure Synapse Analytics
   * Create: Create a database or its constituent objects (Table, View, Index etc)
   * Drop: Delete objects (Table, View, Index) from database
   * Alter: Alter structure of the database
+  * Rename: Rename an existing object
 * Data Query Language (DQL): Perform queries on the data
 * Data Manipulation Language (DML): Insert, update or delete data
+  * Select: Read rows from a table
+  * Insert: Insert new rows into a table
+  * Update: Modify data in existing rows
+  * Delete: Delete existing rows
 * Data Control Language (DCL): Manage permissions and other controls
+  * Grant: Grant permission to perform specific actions
+  * Deny: Deny permission to perform specific actions
+  * Revoke: Remove a previously granted permission
   * Example: `Grant and revoke user access - GRANT SELECT ON course TO user1`
 * Transaction Control Language(TCL): Control transactions within a database
   * Commit - commits a transaction
@@ -145,6 +153,11 @@ Azure Managed Service: Azure Synapse Analytics
   * Second Normal Form (2NF): Eliminate redundant data
   * Third Normal Form (3NF): Move columns not directly dependent on primary key
   * There are other normal forms (4NF, 5NF, ...) but 3NF is considered good enough for most relational data
+* A simple definition for practical purposes is:
+  * Separate each entity into its own table.
+  * Separate each discrete attribute into its own column.
+  * Uniquely identify each entity instance (row) using a primary key.
+  * Use foreign key columns to link related entities.
 * Advantages of Normalization
   * Avoid same data being duplicated in multiple tables
   * Reduce disk space wastage Avoid data inconsistencies
@@ -193,9 +206,20 @@ Azure Managed Service: Azure Synapse Analytics
 * 99.99% availability
 * Choose single zone or zone redundant high availability
 * Automatic updates and backups
-* Alternative: Azure Database for MariaDB(community-developed, commercially supported fork of MySQL)
+
+### Azure Database for MariaDB
+
+> MariaDB: community-developed, commercially supported fork of MySQL
+
+* MariaDB offers compatibility with Oracle Database
+* One notable feature of MariaDB is its built-in support for temporal data.
+* A table can hold several versions of data, enabling an application to query the data as it appeared at some point in the past.
 
 ### Azure Database for PostgreSQL
+
+> PostgreSQL is a hybrid relational-object database.  
+> You can store data in relational tables, but a PostgreSQL database also enables you to store custom data types, with their own non-relational properties.  
+> PostgreSQL has its own query language called pgsql. This language is a variant of the standard relational query language, SQL, with features that enable you to write stored procedures that run inside the database.
 
 * Fully managed, intelligent and scalable PostgreSQL
 * 99.99% availability
@@ -277,12 +301,18 @@ Types:
 * Connect from multiple devices concurrently:
   * From cloud or on-premises
   * From different OS: Windows, Linux, and macOS
-* Supports Server Message Block (SMB) and Network File System (NFS) protocols
+* Supports two common network file sharing protocols:
+  * Server Message Block (SMB) file sharing is commonly used across multiple operating systems (Windows, Linux, macOS).
+  * Network File System (NFS) shares are used by some Linux and macOS versions. To create an NFS share, you must use a premium tier storage account and create and configure a virtual network through which access to the share can be controlled.
 * Usecase: Shared files between multiple VMs (example: configuration files)
 
 ### Azure Blob Storage
 
 > Azure Blob Storage: Object storage in Azure
+
+!!! tips
+
+    Blobs: Binary Large Objects
 
 * Structure: Storage Account > Container(s) > Blob(s)
 * Store massive volumes of unstructured data
@@ -297,7 +327,7 @@ Types:
   * Designed for enterprise big data analytics (exabytes, hierarchical)
   * Low-cost, tiered storage, with high availability/disaster recovery
 * Access tiers
-  * Hot: Store frequently accessed data
+  * Hot(default): Store frequently accessed data
   * Cool: Infrequently accessed data stored for min. 30 days
   * Archive: Rarely accessed data stored for min. 180 days
     * Lowest storage cost BUT Highest access cost
@@ -362,10 +392,13 @@ Types:
   * Velocity: Batch, Streaming ..
 * Terminology: Data warehouse vs Data lake
   * Data warehouse: PBs of Storage + Compute (Typically)
+    * A data warehouse is a relational database in which the data is stored in a schema that is optimized for data analytics rather than transactional workloads
+    * Optimized for **read** operations
     * Data stored in a format ready for specific analysis! (processed data)
       * Examples: Teradata, BigQuery(GCP), Redshift(AWS), Azure Synapse Analytics
     * Typically uses specialized hardware
   * Data lake: Typically retains all raw data (compressed)
+    * A data lake is a file store, usually on a distributed file system for high performance data access.
     * Typically object storage is used as data lake
       * Amazon S3, Google Cloud Storage, Azure Data Lake Storage Gen2 etc..
     * Flexibility while saving cost
