:memo: 补充模拟测试和学习路线上的内容

--- a/docs/Cloud/Azure/AI-900.md
+++ b/docs/Cloud/Azure/AI-900.md
@@ -172,6 +172,13 @@ Terminology:
         * Deploy your model to Azure Kubernetes Service or Azure Container Instances
       * Attached Compute: Use HDInsight cluster, a Virtual Machine, or a Databricks cluster as target for Azure Machine Learning workspace
 
+### Classification
+
+* Accuracy: The ratio of correct predictions (**true positives + true negatives**) to the total number of predictions.
+* Precision: The fraction of positive cases correctly identified (the number of true positives divided by the number of true positives plus false positives).
+* Recall: The fraction of the cases classified as positive that are actually positive (the number of true positives divided by the number of true positives plus false negatives).
+* F1 Score: An overall metric that essentially combines precision and recall.
+
 ## AI considerations
 
 ### Responsible AI Principles
@@ -182,3 +189,29 @@ Terminology:
 * Inclusiveness
 * Transparency
 * Accountability
+
+## Remember
+
+* A cognitive services resource can be used for both training and prediction.
+* Creating a Custom Vision resource for both training and prediction results in two separate resources being provisioned, each with their own key and endpoint.
+* Extreme angles may impair facial detection
+* The Read API is better suited for larger images and it runs asynchronously so it will not block your application while it is running
+* The maximum file size for the pre-built receipt model is 50 MB
+* Computer Vision returns objects with a bounding box to indicate their location in the image.
+* The Translator service can translate from a text source, but not from an audio source.
+* To author a Conversational Language Understanding model, you need a Language resource.
+* Question Answering service is used to create a knowledge base for bots.
+* Language Detection will return NaN when it cannot determine the language in the provided text.
+* Seasonal times series is considered to be a pattern in your data, that occurs at regular intervals.
+* Cognitive Search can index JSON documents. JSON is also used to define index schemas, indexers, and data source objects.
+* An indexer serializes a source document into JSON before passing it to a search engine for indexing. An indexer automates several steps of data ingestion, reducing the amount of code you need to write.
+* Cognitive Search is used for full text search over indexes containing alphanumeric content.
+* Anomaly detection requires time series data.
+* A learning model learns the relationship between the features and the label, a hyperparameter is used to tune machine learning model - the columns in the dataset are not hyperparameters.
+* Tabular and File datasets are the data source types supported in Azure Auto ML.
+* Azure Machine Learning Studio does not support the use of C# or .NET framework. You can use VS or VSCode to create a model in C# using the ML.NET SDK.
+* Sample datasets are included with the Azure Machine Learning designer by default.New Azure Machine learning datesets are merely references to the original data source locations, with a copy of metadata.
+* Azure Machine Learning compute can be used to run your pipeline for training and experimentation. To host your deployed models, you can use Azure Kubernetes Services.
+* The Analyze Image API of Computer Vision can detect adult content, either sexual or gory.
+* A channel is added to make a bot available on a different platform.
+* In the Azure Bot Service a skill is a bot that can extend the functionality of another bot by performing a set of tasks for it. A skill manifest is a JSON file. A root bot is a user-facing bot that is also a skill consumer.
