:memo: 补充内容(依据Exam Prep Segment)

--- a/docs/Cloud/Azure/AZ-104.md
+++ b/docs/Cloud/Azure/AZ-104.md
@@ -438,6 +438,10 @@ The advantages to infrastructure as code are:
 #### Resource Tag
 
 * Each resource tag has a name and a value.
+* Names must be 512 characters or less(124 for storage accounts), values must be 256 characters or less.
+* Names can't contain: <, >, %, &, \\, ?, /
+* Limit of 50 tag name/value pairs for each resource, resource group, or subscription.
+* Tag values can be JSON strings. The string can contain many values apply to a single name.
 * The tag name remains constant for all resources that have the tag applied.
 * The tag value can be selected from a defined set of values, or unique for a specific resource instance.
 * A resource or resource group can have a maximum of 50 tag name/value pairs.
@@ -484,6 +488,14 @@ The advantages to infrastructure as code are:
 > An initiative definition has one or more policy definitions.  
 > One example for using initiative definitions is to ensure your resources are compliant with security regulations.
 
+#### Common Use Cases
+
+* Implementing Governance
+* Regulatory compliance like GDPR/HIPAA/PCI DSS
+* Security
+* Cost
+* Management
+
 ### Configure Role-Based Access Control
 
 > Role-based access control (RBAC) helps you manage who has access to Azure resources, what they can do with those resources, and what areas they have access to.
@@ -496,6 +508,8 @@ The advantages to infrastructure as code are:
   * Examples: Reader, Contributor, Owner, User Access Administrator.
 * Scope:
   * Boundary for the level of access that is requested.
+  * When you grant access at a parent scope, those permissions are inherited to the child scopes.
+  * In Azure, you can specify a scope at multiple levels: management group, subscription, resource group, or resource
   * Examples: management group, subscription, resource group, resource.
 * Assignment:
   * Attaching a role definition to a security principal at a particular scope.
@@ -513,7 +527,7 @@ The advantages to infrastructure as code are:
 * Reader: Can view existing Azure resources.
 * Contributor: Can create and manage all types of Azure resources, but can’t grant access to others.
 * Owner: Has full access to all resources, including the right to delegate access to others.
-* User Access Administrator: Lets you manage user access to Azure resources.
+* User Access Administrator: Lets you manage user access to Azure resources.(Note: this is an Azure AD role)
 * Deny Assignments
   * Similar to windows deny files permission
   * Blocks users from performing specific actions even if a role assignments allows it
@@ -544,17 +558,17 @@ The advantages to infrastructure as code are:
 
 * Storage for Virtual Machines
   * Virtual machine storage includes disks and files.
-  * Disks are persistent block storage for Azure IaaS virtual machines.
-  * Files are fully managed file shares in the cloud.
+  * `Disks` are persistent block storage for Azure IaaS virtual machines.
+  * `Files` are fully managed file shares in the cloud.
 * Unstructured Data
   * Unstructured data includes Blobs and Data Lake Store.
-  * Blobs are highly scalable, REST-based cloud object store.
-  * Data Lake Store is Hadoop Distributed File System (HDFS) as a service.
+  * `Blobs` are highly scalable, REST-based cloud object store.
+  * `Data Lake Store` is Hadoop Distributed File System (HDFS) as a service.
 * Structured Data
   * Structured data includes Tables, Cosmos DB, and Azure SQL DB.
-  * Tables are a key/value, autoscaling NoSQL store.
-  * Cosmos DB is a globally distributed database service.
-  * Azure SQL DB is a fully managed database-as-a-service built on SQL.
+  * `Tables` are a key/value, autoscaling NoSQL store.
+  * `Cosmos DB` is a globally distributed database service.
+  * `Azure SQL DB` is a fully managed database-as-a-service built on SQL.
 
 #### Storage Account Tiers
 
@@ -572,17 +586,19 @@ The advantages to infrastructure as code are:
 
 #### Storage Services
 
-* Azure Containers (Blobs): A massively scalable object store for text and binary data.
-* Azure Files: Managed file shares for cloud or on-premises deployments.
-* Azure Queues: A messaging store for reliable messaging between application components.
-* Azure Tables: A NoSQL store for schemaless storage of structured data.
+* Azure Containers (Blobs): A massively scalable object store for unstructured text and binary data.
+* Azure Files(Directories): Managed file shares for cloud or on-premises deployments.
+* Azure Queues(Entities): A messaging store for reliable messaging between application components.
+* Azure Tables(Messaging): A NoSQL store for schema-less storage of structured data.
 
-#### Replication Stategies
+#### Access Keys
 
-* Locally redundant storage
-* Zone redundant storage
-* Geo-redundant storage
-* Geo-zone redundant storage
+The order of operations to rotate storage account access keys:
+
+1. Update connection string with secondary access key
+2. Regenerate primary access key
+3. Update connection string with primary access key
+4. Regenerate secondary access keys
 
 ### Azure Data Redundancy
 
@@ -682,6 +698,13 @@ By default, container data is private to the account owner.
 
 > A shared access signature (SAS) is a URI that grants restricted access rights to Azure Storage resources.  
 > You can provide a SAS to clients who shouldn't have access to your storage account key.
+
+A SAS token:
+
+* Grants secure and delegated access to resources in Azure Storage Account
+* Provides access to clients without sharing their storage account keys
+* Provides access to Azure resources in multiple storage services
+* Delegates secured access to a resource in only one of the storage services
 
 !!! note
 
@@ -829,7 +852,6 @@ By default, container data is private to the account owner.
 * access anywhere
 * lift and shift
 * azure file sync
-* azure file sync
 * shared application
 * diagnostic data
 * tools and utilities
@@ -842,6 +864,13 @@ Cloud tiering allows frequently accessed files to be cached on the local server.
 * Fully managed: Azure will manage hardware or an OS
 * Resiliency: you don’t have to deal with local power and network issues.
 
+#### Managing file share
+
+* File share quotas
+* Windows - ensure 445 port is open
+* Linux / MacOS - mount the drive
+* Secure transfer required - SMB 3.0 encryption
+
 #### file sync components
 
 ![file sync components](https://learn.microsoft.com/en-us/training/wwl-azure/configure-azure-files-file-sync/media/file-sync-components-c6561274.png)
@@ -850,8 +879,12 @@ Cloud tiering allows frequently accessed files to be cached on the local server.
 
 #### Azure Storage Explorer
 
-> Azure Storage Explorer is a standalone app that makes it easy to work with Azure Storage data on Windows, macOS, and Linux.  
-> With Storage Explorer, you can access multiple accounts and subscriptions and manage all your storage content.
+> Azure Storage Explorer is a standalone app that makes it easy to work with Azure Storage data on Windows, macOS, and Linux.
+
+* With Storage Explorer, you can access multiple accounts and subscriptions and manage all your storage content.
+* Create, delete, view, and edit storage resources
+* View and edit Blob, Queue, Table, File, Cosmos DB storage, and Lake Storage
+* Obtain shared access signature(SAS) keys
 
 #### Use the import and export service
 
@@ -869,9 +902,10 @@ The Azure Import/Export Tool is the drive preparation and repair tool that you c
 
 #### Use AzCopy
 
-> AzCopy v10 is the next-generation command-line utility for copying data to/from Microsoft Azure Blob and File storage, which offers a redesigned command-line interface and new architecture for high-performance reliable data transfers.
+> AzCopy v10 is the next-generation **command-line utility** for copying data to/from Microsoft Azure Blob and File storage, which offers a redesigned command-line interface and new architecture for high-performance reliable data transfers.
 
- The AzCopy tool can work with two different storage accounts.
+* The AzCopy tool can work with two different storage accounts.
+* Authentication options include Active Directory or SAS token
 
 !!! note
 
@@ -925,13 +959,18 @@ The settings that are defined by a storage account are:
 
 #### VM size
 
-* General purpose
-* Compute optimized
-* Memory optimized
-* Storage optimized
-* Storage optimized
-* GPU
-* High performance compute
+* A Series: Entry-level for dev/test
+* B Series: Economical bursting
+* D Series: General purpose compute
+* Dc Series: Protect data in use
+* E Series: In-memory, hyper-threaded applications optimized
+* F Series: Compute optimized
+* G Series: Memory and storage optimized
+* H Series: High performance computing
+* L Series: Storage optimized
+* M Series: Memory optimized
+* Mv2 Series: Large memory optimized
+* N Series: GPU enabled
 
 #### VM storage
 
@@ -973,6 +1012,13 @@ Managed disks: Azure-managed disks are stored as page blobs, which are a random 
 #### Setup availability sets
 
 > An Availability Set is a logical feature used to ensure that a group of related VMs are deployed so that they aren't all subject to a single point of failure and not all upgraded at the same time during a host operating system upgrade in the datacenter.
+
+Configure scale sets:
+
+* Instance count(number of VMs in the scale set - 0 to 1000)
+* Instance size(size of each virtual machine in the scale set)
+* Usage of managed disks
+* Scaling beyong 100 instances
 
 ### Configure virtual machine extensions
 
@@ -1074,14 +1120,52 @@ Azure VM extensions can be:
 * Pre-warming a slot before deploying an app ensures that all instances of the slot are ready to go. Deploying your app without downtime. No requests are lost due to traffic redirection.
 * When pre-swap validation is not required, Auto Swap can be configured to automate the whole workflow.
 * After a swap, the previously staged app is now the production app. To restore your “last known good site” if the changes swapped into production do not meet your expectations, simply perform the same swap.
-* Automated swapping simplifies Azure DevOps scenarios that require no cold starts or downtime for app users. When auto swap from a source slot to production is enabled, App Service automatically swaps the app into production after it has warmed up in the source slot. Web apps on Linux don't support auto swap yet.
+* Automated swapping simplifies Azure DevOps scenarios that require no cold starts or downtime for app users.
+  * When auto swap from a source slot to production is enabled, App Service automatically swaps the app into production after it has warmed up in the source slot.
+  * Web apps on Linux don't support auto swap yet.
+
+#### Managing App Service
+
+* Create App Service
+  * Give unique name
+  * Access azurewebsites.net to map to a custom domain
+  * Publish code or docker container and runtime stack
+  * Select the operating system
+  * Select the region closest to your user
+  * Choose the app service plan
+* Secure App Service
+  * Sign in with a third-party identity provider
+  * Troubleshoot with Diagnostic Logs
+  * Add SSL certificate-HTTPS
+  * Define the priority ordered allow/deny list
+  * Stores secret in Azure Key Vault
+* Configure custom domain names
+  * Redirect default web app for URL
+  * Validate custom domain in Azure
+  * Use DNS registry for domain provider to create CNAME
+  * Ensure that the app service plan is supported by the custom domains
+* Configure backup
+  * Create backups for apps on a schedule or manully
+  * Create backup for the configuration, database, and file content
+  * Requires Standand/Premium plan
+  * Configure partical plan
+  * Restore app to a previous state, on-demand
+* Configure networking settings
+  * Create gateway subnet
+  * Create virtual network gateway
+  * Create local network gateway
+  * Create VPN connection
+  * Enable inbound traffic to Azure
+* Configure deployment settings
+  * Configure app settings and connections to stick to a slot and not be swapped
+  * Explore creating a new settings for the web app
 
 ### Configure Azure Container Instances(ACI)
 
 #### Implement container groups
 
 > The top-level resource in Azure Container Instances is the container group.  
-> A container group is a collection of containers that get scheduled on the same host machine.  
+> A **container group** is a collection of containers that get scheduled on the same host machine.  
 > The containers in a container group share a lifecycle, resources, local network, and storage volumes.  
 > It's similar in concept to a pod in Kubernetes.
 
@@ -1095,7 +1179,7 @@ Features:
 * Custom Sizes
 * Persistent Storage
 * Linux and Windows Containers
-* Coscheduled Groups
+* Co-scheduled Groups
 * Virtual Network Deployment
 
 ### Configure Azure Kubernetes Service
@@ -1227,6 +1311,17 @@ C | 192.168.0.0 - 192.168.255.255 | 255.255.255.0|
 * When you create VM using portal, one NIC with default setting created.
 * IP address and NSG rules are attach with NIC
 * You can create more than one NIC and attach to VM.
+
+#### Terminology
+
+* Switch: connects devices within same network
+* Router: a networking device that forwards data packets between **different** computer networks
+* Subnet: defines your local area network range
+* Gateway: **the IP Address of the router**
+* NAT: Network address translation is a method of remapping an IP address while they are in transit across a traffic routing device
+* Firewall: set of passive rules to protect network from unauthorized access
+* DMZ: demilitarized zone is a subnetwork that contains and exposes a device to an untrusted network such as Internet
+* Port Forwarding: redirects a communication request from one address and port number combination to another while the packets are traversing a network gateway
 
 ### Configure virtual networks
 
@@ -1408,6 +1503,12 @@ The initial domain name is intended to be used until a custom domain name is ver
 * Role-based access control
 * Activity logs
 * Resource locking
+  * Delete: Authorized users can still read and modify a resource, but they can't delete the resource
+  * Read-only: Authorized users can read a resource, but they can't delete or update the resource
+
+!!!note
+
+    To delete a locked VM, users will need to contact a user with appropriate permissions - either an Owner or a User Access Administrator
 
 ### Configure virtual network peering
 
@@ -1433,6 +1534,17 @@ The initial domain name is intended to be used until a custom domain name is ver
 
 * Initiated: When you create the peering to the second virtual network from the first virtual network, the peering status is Initiated.
 * Connected: When you create the peering from the second virtual network to the first virtual network, its peering status is Connected.
+
+#### Application workload connectivity options
+
+* Create a virtual network subnet: As the VMs are part of the same virtual network, they can automatically perform name resolution and communite with the Azure AD DS domain controllers
+* Configure virtual network peering: When you configure virtual network peering, you must also configure DNS settings to use name resolution back to the Azure AD DS domain controllers
+
+#### Parameters to consider
+
+* Allow forwarded traffic - Allows traffic not originating from within the peer virtual network into your virtual network
+* Allow gateway transit - Allows the peer virtual network to use your virtual network gateway
+* Use remote gateway - Only one virtual network can have this enabled
 
 ### Configure VPN Gateway
 
@@ -1695,7 +1807,7 @@ Key benefits:
   * You can back up specific files and folders
   * You can backup both Azure VM or on-premises Windows Server machines by running the MARS agent.
 * DPM/MABS (Data Protection Manager/Azure Backup Server)
-  * On-premises machines can be backed up to DPM or Azure Backup Server (MABS). The backup server can be backed up to Azure Recovery Services.
+  * **On-premises machines** can be backed up to DPM or Azure Backup Server (MABS). The backup server can be backed up to Azure Recovery Services.
   * You can back up Azure VMs to the MABS that's running in Azure, and you can then back up the MABS to a Recovery Services vault.
 
 #### Backup Report
@@ -1728,6 +1840,16 @@ Key benefits:
 > The data is typically copies of data, or configuration information for virtual machines (VMs), workloads, servers, or workstations.
 
 ### Configure Azure Monitor
+
+#### Monitoring options
+
+* Security Center: Manages the security of your infrastucture from a centralized location
+* Application Insights: Monitors the availability, performance, and usage of your web applications whether they're hosted in the cloud or on-premises
+* Azure Monitor: Collects, combines, and analyzes data from different sources
+
+!!! note
+
+    All monitoring solutions require a Log Analytics workspace to store data collected by the solution and to host its log searches and views
 
 #### Azure Monitor key capabilities
 
@@ -1934,6 +2056,15 @@ The key attributes of an alert rule are:
   * Hybrid cloud connectivity issues related to Gateway or Express Route
 * Every region has a unique Network Watcher instance.
 * The hidden NetworkWatcherRG resource group contains Network Watcher resources.
+
+#### Overview of Network Watcher
+
+* `IP flow` verify diagnose connectivity issues
+* `Next hop` determines if the traffic is being correctly routed
+* `VPN troubleshoot` troubleshoots gateways and connections
+* `NSG flow logs` maps IP traffic through a Network Security Group
+* `Connection troubleshoot` shows connectivity between source VM and destination
+* `Topology` generates a virtual diagram of resources
 
 #### IP Flow
 
